# developer-knowledge-rag

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.ui  README.MD  docker-compose.yml  pyproject.toml
data/raw/: api_endpoints.md  authentication.md  error_handling.md  getting_started.txt  new_guide.md
developer_docs_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: index.html
src/: config.py
src/api/: main.py
src/embeddings/: embedder.py
src/evaluation/: evaluate.py
src/ingestion/: chunker.py  loader.py  run_ingestion.py  test_loader.py
src/llm/: ollama_client.py  run_llm_test.py
src/rag/: agentic_pipeline.py  pipeline.py  run_agentic.py  run_rag.py
src/retrieval/: retriever.py  run_retrieval.py
tests/: test_health.py
tests/api/: test_main.py
tests/embeddings/: test_embedder.py
tests/ingestion/: test_chunker.py  test_loader.py
tests/llm/: test_ollama_client.py
tests/rag/: test_pipeline.py
tests/retrieval/: test_retriever.py
ui/: app.py
vectorstore/: chroma.sqlite3
